tests/paczka1/fuzzy1/42263150.err
Error in line 2: OijXxL S170 86,3
Error in line 14: e32VdtAeW S71 78,7
Error in line 19: VBwA4TLBETx S399 95,5
Error in line 18: cJgr8N S170 18,8
Error in line 21: OijXxL A554 29,7
Error in line 34: bwTlv3 S71 27,6
Error in line 32: bNovgU S399 53,0
